--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,13 +3,14 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Hack';
-  src: url(/assets/fonts/Hack-NF.ttf);
+  font-family: 'Press Start 2P';
+  src: url(/assets/fonts/PressStart2P.ttf);
   display: swap;
 }
 
 * {
-  font-family: 'Hack', monospace;
+  @apply text-sm my-2;
+  font-family: 'Press Start 2P', monospace;
 }
 
 html,
@@ -17,25 +18,49 @@ body,
 body > div:first-child,
 div#__next,
 div#__next > div {
-  height: 100%;
-  overflow: auto;
+  @apply h-full overflow-y-auto overflow-x-hidden max-w-full;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  @apply h-2 w-2;
 }
 
 ::-webkit-scrollbar-track {
-  background: #1e252e;
-  border-radius: 5px;
+  @apply rounded bg-dark-yellow;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #ebdbb2;
-  border-radius: 5px;
+  @apply rounded bg-dark-foreground;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #ff8037;
+  @apply bg-dark-red;
+}
+
+main {
+  max-width: 100vw;
+}
+
+h1 {
+  @apply mb-2 text-xl md:text-2xl lg:text-3xl text-dark-green;
+}
+
+h2 {
+  @apply mb-2 text-lg md:text-xl lg:text-2xl text-light-gray;
+}
+
+h3 {
+  @apply mb-2 text-base md:text-lg lg:text-xl text-light-red;
+}
+
+p {
+  @apply mb-2 text-xs leading-loose;
+}
+
+.banner-text {
+  @apply my-5 text-5xl md:text-7xl lg:text-9xl text-dark-yellow;
+}
+
+.banner-subtext {
+  @apply my-5 text-xs md:text-sm lg:text-base leading-loose text-dark-red;
 }
