Update mobile styles

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+
 html {
 	font-size: 62.5%;
 	overflow-x: hidden;
@@ -22,6 +24,7 @@ h1 {
 .landing-page-container {
 	background-image: linear-gradient(-225deg, #F3D2D2 0%, #D4E0E2 19%, #81D1E5 42%, #D3D1EC 79%, #C8DAEC 100%);
 	color: #2a2a2a;
+	display: inline-flex;
 	font-family: "Montserrat", sans-serif;
 	transition: transform 0.7s cubic-bezier(0.47, 0.04, 0.22, 0.92), height 0.2s ease, width 0.2s ease;
     border-radius: 0;
@@ -45,8 +48,25 @@ h1 {
 .header {
 	display: flex;
 	height: 2rem;
-	justify-content: space-between;
+	justify-content: center;
 	padding: 2.5rem 0;
+	width: 100%;
+}
+
+.main {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.footer {
+	bottom: 10px;
+	display: flex;
+	height: 2rem;
+	justify-content: center;
+	padding: 2.5rem 0;
+	position: absolute;
 	width: 100%;
 }
 
@@ -99,63 +119,56 @@ h1 {
 	font-weight: 300;
 	line-height: 1.7rem;
 	margin: 0;
-	padding: 0 0 0 5rem;
+	padding: 0 10px;
+	text-align: center;
 	width: auto;
 }
 
-.social-container {
-	float: right;
-	list-style: none;
-	margin: 0;
-	overflow: hidden;
+.socialbtns ul {
+	margin: 0 auto;
 	padding: 0;
-	width: 7.25rem;
 }
 
-.social-container .social-icon {
-	cursor: pointer;
-	float: left;
+.socialbtns li {
+    list-style: none outside none;
+    display: inline-block;
 }
 
-.social-container .social-icon.social-icon--dr {
-	margin-left: 0.5rem;
+.socialbtns .fa {
+	text-decoration: none;
+	padding: 0 5px;
+	color: #2a2a2a;
+	text-shadow: 1px 1px 0px #fff,
+			1px -1px 0px #fff,
+			-1px 1px 0px #fff,
+			-1px -1px 0px #fff;
+	transition: all ease-out 0.5s;
 }
 
-.social-container .social-icon.social-icon--dr img {
-	height: 2rem;
-}
-
-.social-container .social-icon.social-icon--in {
-	margin-left: 0.75rem;
-}
-
-.social-container .social-icon.social-icon--in img {
-	height: 2rem;
-}
-
-.social-container .social-icon.social-icon--fb img {
-	height: 2rem;
-	margin: 0rem;
+.socialbtns .fa:hover {
+	color: #FA2FB5;
+	text-shadow: 1px 1px 0px #2a2a2a,
+			1px -1px 0px #2a2a2a,
+			-1px 1px 0px #2a2a2a,
+			-1px -1px 0px #2a2a2a;
+	transition: all ease 0.5s;
 }
 
 .coordinates {
+	bottom: 100px;
 	display: inline-block;
-	float: left;
 	font-size: 1rem;
-	left: -11.5rem;
 	letter-spacing: 0.2rem;
 	margin: 0;
-	position: relative;
-	top: 40%;
-	transform: rotate(-90deg) translateY(50%);
+	position: absolute;
 }
 
 .ellipses-container {
 	border-radius: 50%;
 	height: 50rem;
 	margin: 0 auto;
-	position: relative;
-	top: 4%;
+	position: absolute;
+	top: 10%;
 	width: 50rem;
 }
 
@@ -260,11 +273,11 @@ h1 {
 }
 
 .scroller {
-	bottom: 10%;
+	bottom: 140px;
 	display: inline-block;
-	float: right;
 	overflow: hidden;
-	position: relative;
+	position: absolute;
+	right: 0;
 	transform: translateY(50%);
 	width: 7.5rem;
 }
@@ -406,6 +419,22 @@ h1 {
 	width: 100px;
 }
 
+@media screen and (min-width: 992px) {
+	.main {
+		flex-direction: row;
+	}
+
+	.coordinates {
+		bottom: unset;
+		left: 0;
+		top: 15%;
+		transform: rotate(-90deg) translateY(50%);
+	}
+
+	.scroller {
+		bottom: 15%;
+	}
+}
 
 @keyframes bk {
 	0% {
@@ -444,4 +473,41 @@ h1 {
 	100% {
 		transform: rotate(360deg);
 	}
+}
+
+.menu {
+  position: relative;
+}
+.menu span {
+  position: absolute;
+  background-color: black;
+  padding: 15px 10px;
+  border: 3px solid white;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
+}
+.menu span.hidden {
+  visibility: hidden;
+}
+.menu span:last-child {
+  padding: 13px 15px;
+}
+.menu span:nth-child(1) {
+  background-color: lightblue;
+  padding: 15px 15px;
+}
+.menu span:nth-child(1).show {
+  transform: rotate(0deg) translate(100px) rotate(0deg);
+}
+.menu span:nth-child(2) {
+  background-color: darkblue;
+}
+.menu span:nth-child(2).show {
+  transform: rotate(45deg) translate(100px) rotate(-45deg);
+}
+.menu span:nth-child(3) {
+  background-color: red;
+}
+.menu span:nth-child(3).show {
+  transform: rotate(90deg) translate(100px) rotate(-90deg);
 }
